# scratch

./: .clang-format  .gitignore  Makefile  compile_flags.txt  meson.build
.github/: README.md
src/: main.c  scratch-config.h  scratch-style.css  scratch-textview.c  scratch-textview.h  scratch-window.ui  scratch-wm.c  scratch-wm.h  scratch.gresource.xml  scratch.h
